New Long Covid entry with both dark and normal theme with all languages

--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1209,6 +1209,46 @@
     "delete_account":"Удалить аккаунт",
     "ConversationList" :"Список разговоров",
 		"ContactList" :"Contact List",
-    "searchingLoading" : "Поиск загружается ..."
+    "searchingLoading" : "Поиск загружается ...",
+		"Symptoms":"Симптомы",
+		"Better_experience":"Этот инструмент можно использовать для отслеживания вашего состояния после заболевания Covid-19. Пожалуйста, укажите симптомы, ваше состояние и т. Д., Заполняя эту форму не реже одного раза в неделю. При необходимости вы можете связаться с нашим консультантом по Covid-19, узнать больше о своем состоянии и лучше справиться с последствиями Covid-19.",
+		"energy_level_determine":"Пожалуйста, определите свой уровень энергии.",
+		"Fatique_questions":"Устные вопросы (на основе детской шкалы усталости)",
+		"problem_with_tiredness":"У вас проблемы с усталостью?",
+		"rest_more":"Вам нужно больше отдыхать?",
+		"sleepy_drowsy":"Вы чувствуете сонливость или сонливость?",
+		"starting_things":"У вас проблемы с запуском?",
+		"lack_energy":"Вам не хватает энергии?",
+		"your_muscles":"У вас меньше силы в мышцах?",
+		"feel_week":"Вы чувствуете себя слабым?",
+		"difficulties_concentrating":"У вас проблемы с концентрацией?",
+		"tongue_when_speaking":"Вы оговариваетесь, когда говорите?",
+		"right_word":"Вам труднее подобрать нужное слово?",
+		"Fatique":"Усталость",
+		"Headache":"Головная боль",
+		"Shortness_of_breath":"Сбивчивое дыхание",
+		"loss_smell":"Потеря запаха",
+		"Persistent_cough":"Постоянный кашель",
+		"Sore_throat":"Больное горло",
+		"Fever":"Высокая температура",
+		"muscle_pain":"Необычная мышечная боль",
+		"Skipped_meals":"Пропущенные приемы пищи",
+		"Chest_pain":"Грудная боль",
+		"Diarrhea":"Понос",
+		"Hoarse_voice":"Хриплый голос",
+		"Abdominal_pain":"Боль в животе",
+		"Delirium":"Бред",
+		"Oxygen_therapy":"Кислородная терапия",
+		"ECMOtherapy":"ЭКМО терапия",
+		"Sepsis":"Сепсис",
+		"Multiorgan_failure":"Полиорганная недостаточность",
+		"past_date": "Прошлая дата",
+		"how_memory":"Как твоя память?",
+		"long_covid":"Наблюдение за Long-Covid",
+		"energy_lavel_determine":"Пожалуйста, определите свой уровень энергии",
+		"EnergyManagement":"Управление энергией",
+		"CovidElearning":"Covid Электронное обучение",
+		"Exercise":"Упражнение",
+		"ChatwithCovidconsultant":"Чат с консультантом Covid"
   }
 }
