--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1241,7 +1241,7 @@
 		"Sepsis":"Sepsis",
 		"Multiorgan_failure":"Kushindwa kwa anuwai nyingi",
 		"past_date": "Tarehe Iliyopita",
-		"how_memory":"Kumbukumbu yako ikoje?",
+		"how_memory":"Je! Una maswala ya kumbukumbu?",
 		"long_covid":"Uchunguzi wa muda mrefu wa Covid",
 		"energy_lavel_determine":"Tafadhali amua kiwango chako cha nishati",
 		"EnergyManagement":"Usimamizi wa Nishati",
