--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1242,12 +1242,13 @@
 		"Sepsis":"Sepsis",
 		"Multiorgan_failure":"Multiorgan failure",
 		"past_date": "Past Date",
-		"how_memory":"How is your memory?",
+		"how_memory":"Do you have memory issues?",
 		"long_covid":"Long-Covid observation",
 		"energy_lavel_determine":"Please determine your energy level",
 		"EnergyManagement":"Energy Management",
 		"CovidElearning":"Covid Elearning",
 		"Exercise":"Exercise",
-		"ChatwithCovidconsultant":"Chat with Covid consultant"
+		"ChatwithCovidconsultant":"Chat with Covid consultant",
+		"Currentpaincondition":"Current pain condition"
 	}
 }
