--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1250,6 +1250,8 @@
 		"CovidElearning":"Covid Электронное обучение",
 		"Exercise":"Упражнение",
 		"ChatwithCovidconsultant":"Чат с консультантом Covid",
-    "Currentpaincondition":"Текущее состояние боли"
+    "Currentpaincondition":"Текущее состояние боли",
+    "verifyAccount":"Ваша учетная запись не подтверждена, проверьте свою электронную почту.",
+    "needUnblock": " Ваша учетная запись еще не разблокирована, укажите свой профессиональный идентификатор или, если вы отправляли его недавно, дайте нам до 24 часов, чтобы разблокировать его"
   }
 }
