--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1249,6 +1249,8 @@
 		"CovidElearning":"كوفيد التعلم الإلكتروني",
 		"Exercise":"يمارس",
 		"ChatwithCovidconsultant":"تحدث مع مستشار كوفيد",
-		"Currentpaincondition":"حالة الألم الحالية"
+		"Currentpaincondition":"حالة الألم الحالية",
+		"verifyAccount":"لم يتم التحقق من حسابك ، يرجى التحقق من حساب البريد الإلكتروني الخاص بك.",
+		"needUnblock": "لم يتم إلغاء قفل حسابك بعد ، يرجى تقديم معرّفك المهني أو إذا كنت قد أرسلته مؤخرًا ، فيرجى منحنا ما يصل إلى 24 ساعة لإلغاء قفله."
 	}
 }
