--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1250,6 +1250,8 @@
 		"CovidElearning":"Covid在线学习",
 		"Exercise":"锻炼",
 		"ChatwithCovidconsultant":"与 Covid 顾问聊天",
-		"Currentpaincondition":"目前的疼痛状况"
+		"Currentpaincondition":"目前的疼痛状况",
+		"verifyAccount":"您的帐户未经验证，请检查您的电子邮件帐户。",
+		"needUnblock": "您的帐户尚未解锁，请提供您的职业 ID 或者如果您最近提交过，请给我们最多 24 小时解锁它。"
 	}
 }
