--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1249,6 +1249,8 @@
 		"CovidElearning":"Covid Elearning",
 		"Exercise":"Ejercicio",
 		"ChatwithCovidconsultant":"Chatear con el consultor de Covid",
-		"Currentpaincondition":"Condición de dolor actual"
+		"Currentpaincondition":"Condición de dolor actual",
+		"verifyAccount":"Su cuenta no está verificada, verifique su cuenta de correo electrónico.",
+		"needUnblock": "Su cuenta aún no está desbloqueada, proporcione su identificación profesional o, si la ha enviado recientemente, denos hasta 24 horas para desbloquearla."
 	}
 }
