--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1247,6 +1247,8 @@
 		"EnergyManagement":"Usimamizi wa Nishati",
 		"CovidElearning":"Kujifunza kwa Covid",
 		"Exercise":"Zoezi",
-		"ChatwithCovidconsultant":"Ongea na mshauri wa Covid"
+		"ChatwithCovidconsultant":"Ongea na mshauri wa Covid",
+		"verifyAccount":"Akaunti yako haijathibitishwa, tafadhali angalia akaunti yako ya barua pepe.",
+		"needUnblock": "Akaunti yako bado haijafunguliwa, tafadhali toa kitambulisho chako cha kitaalam au ikiwa umeiwasilisha hivi karibuni, tafadhali tupe hadi masaa 24 kuifungua."
 	}
 }
