--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -1248,6 +1248,8 @@
 		"CovidElearning":"Covid e-öğrenme",
 		"Exercise":"Egzersiz yapmak",
 		"ChatwithCovidconsultant":"Covid danışmanıyla sohbet et",
-		"Currentpaincondition":"Mevcut ağrı durumu"
+		"Currentpaincondition":"Mevcut ağrı durumu",
+		"verifyAccount":"Hesabınız doğrulanmadı, lütfen e-posta hesabınızı kontrol edin.",
+		"needUnblock": "Hesabınızın kilidi henüz açılmadı, lütfen profesyonel kimliğinizi sağlayın veya hesabı yakın zamanda gönderdiyseniz, kilidini açmamız için lütfen bize 24 saat verin."
 	}
 }   
