some changes for optimization

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1273,7 +1273,7 @@
 		"PatientID":"Patient ID",
 		"PatientPIN":"Patient PIN",
 		"CaseNumber":"Case Number",
-		"AddQuestionnaire":"Add Questionnaire",
+		"AddQuestionnaire":"Create a Questionnaire",
 		"EditQuestionnaire":"Edit Questionnaire",
 		"Addnewservice":"Add new service",
 		"Specialities":"Specialities",
@@ -1304,7 +1304,7 @@
 		"Bedsinroom":"Beds in room",
 		"AssignHouse":"Assign House",
 		"AddTask":"Add Task",
-		"AddSpecialty":"Add Specialty",
+		"AddSpecialty":"Add Speciality",
 		"ChangeStaff":"Change Staff",
 		"AssignWardRoom":"Assign Ward / Room",
 		"MovePatient":"Move Patient",
