--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1302,7 +1302,7 @@
 		"Attachments":"Attachments",
 		"Roomname":"Roomname",              
 		"Bedsinroom":"Beds in room",
-		"AssignHouse":"Assign House",
+		"AssignHouse":"Assign Hospitals",
 		"AddTask":"Add Task",
 		"AddSpecialty":"Add Speciality",
 		"ChangeStaff":"Change Staff",
