recaptcha at add patient from doctor end

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1251,6 +1251,7 @@
 		"ChatwithCovidconsultant":"تحدث مع مستشار كوفيد",
 		"Currentpaincondition":"حالة الألم الحالية",
 		"verifyAccount":"لم يتم التحقق من حسابك ، يرجى التحقق من حساب البريد الإلكتروني الخاص بك.",
-		"needUnblock": "لم يتم إلغاء قفل حسابك بعد ، يرجى تقديم معرّفك المهني أو إذا كنت قد أرسلته مؤخرًا ، فيرجى منحنا ما يصل إلى 24 ساعة لإلغاء قفله."
+		"needUnblock": "لم يتم إلغاء قفل حسابك بعد ، يرجى تقديم معرّفك المهني أو إذا كنت قد أرسلته مؤخرًا ، فيرجى منحنا ما يصل إلى 24 ساعة لإلغاء قفله.",
+		"fillreptcha":"الرجاء ملء RECAPTCHA"
 	}
 }
