--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1252,6 +1252,7 @@
 		"ChatwithCovidconsultant":"与 Covid 顾问聊天",
 		"Currentpaincondition":"目前的疼痛状况",
 		"verifyAccount":"您的帐户未经验证，请检查您的电子邮件帐户。",
-		"needUnblock": "您的帐户尚未解锁，请提供您的职业 ID 或者如果您最近提交过，请给我们最多 24 小时解锁它。"
+		"needUnblock": "您的帐户尚未解锁，请提供您的职业 ID 或者如果您最近提交过，请给我们最多 24 小时解锁它。",
+		"fillreptcha":"请填写 RECAPTCHA"
 	}
 }
