New field in covid 19 observation

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1253,6 +1253,7 @@
 		"Currentpaincondition":"Aktueller Schmerzzustand",
 		"verifyAccount":"Ihr Konto ist nicht verifiziert, überprüfen Sie bitte Ihr E-Mail-Konto.",
 		"needUnblock": "Ihr Konto ist noch nicht entsperrt, bitte geben Sie Ihren Berufsausweis an oder geben Sie uns bitte bis zu 24 Stunden Zeit, um es zu entsperren, falls Sie es kürzlich eingereicht haben.",
-		"fillreptcha": "Bitte füllen Sie das RECAPTCHA aus"
+		"fillreptcha": "Bitte füllen Sie das RECAPTCHA aus",
+		"Tachykardia":"Tachykardie"
 	}
 }
