--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1253,6 +1253,7 @@
     "Currentpaincondition":"Текущее состояние боли",
     "verifyAccount":"Ваша учетная запись не подтверждена, проверьте свою электронную почту.",
     "needUnblock": " Ваша учетная запись еще не разблокирована, укажите свой профессиональный идентификатор или, если вы отправляли его недавно, дайте нам до 24 часов, чтобы разблокировать его",
-    "fillreptcha": "Пожалуйста, заполните RECAPTCHA"
+    "fillreptcha": "Пожалуйста, заполните RECAPTCHA",
+    "Tachykardia":"Тахикардия"
   }
 }
