--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1252,6 +1252,7 @@
 		"Currentpaincondition":"Condición de dolor actual",
 		"verifyAccount":"Su cuenta no está verificada, verifique su cuenta de correo electrónico.",
 		"needUnblock": "Su cuenta aún no está desbloqueada, proporcione su identificación profesional o, si la ha enviado recientemente, denos hasta 24 horas para desbloquearla.",
-		"fillreptcha": "Por favor complete el RECAPTCHA" 
+		"fillreptcha": "Por favor complete el RECAPTCHA",
+		"Tachykardia":"Taquicardia"
 	}
 }
