--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -779,6 +779,7 @@
 		"appointment_booked": "Afspraak succesbol gemaakt",
 		"upcming_apointment": "Volgende afspraken",
 		"office_visit": "Praktijkbezoek",
+		"Task":"Taak",
 		"cancel_apointmnt": "Annuleer afspraak",
 		"show_past_apointment": "Toon afgelopen afspraken",
 		"plz_write_short_explnation": "Vertel alsjeblieft in het kort waarom je deze afspraak moet afzeggen. Alvast bedankt.",
