--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -449,6 +449,7 @@
 		"holiday": "Férias",
 		"upcming_apointment": "Consulta médica futura",
 		"office_visit": "Visita ao escritório",
+		"Task":"Tarefa",
 		"cancel_apointmnt": "Cancela  a consulta médica",
 		"show_past_apointment": "Mostrar consultas médicas anteriores",
 		"plz_write_short_explnation": "Por favor, escreva uma breve explicação de porque tem que cancelar a consulta médica. Obrigado.",
