--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -459,6 +459,7 @@
 		"appointment_booked": "Termin başarılı bir şekilde kayıt edildi",
 		"upcming_apointment": "Gelecek terminler",
 		"office_visit": "Ofis ziyareti",
+		"Task":"Görev",
 		"cancel_apointmnt": "Termini iptal et",
 		"show_past_apointment": "Geçmiş terminleri göster",
 		"plz_write_short_explnation": "Lütfen kısaca termini neden iptal ettigini acıkla. Teşekkür ederim.",
