--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -458,6 +458,7 @@
 		"appointment_booked": "تم حجز الموعد بنجاح",
 		"upcming_apointment": "المواعيد القادمة",
 		"office_visit": "زيارة مكتبية",
+		"Task":"مهمة",
 		"cancel_apointmnt": "إلغاء الموعد",
 		"show_past_apointment": "إظهار المواعيد السابقة",
 		"plz_write_short_explnation": "يرجى كتابة شرح موجز لسبب اضطرارك لإلغاء الموعد. شكرًا لك.",
