worked on edit comment in TaskSectionVh file

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1330,7 +1330,13 @@
 		"Lastdoctorvisits":"Last doctor visits",
 		"Upcomingappointment":"Upcoming appointment",
 		"LastDocuments":"Last Documents",
-		"Prescription":"Prescription"
+		"Prescription":"Prescription",
+		"Invoice_ID":"Invoice ID",
+		"Add_service":"Add service"
+		
+		
+		
+
 		
 		
 	}
