All changes that loss due to patient flow issue

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -458,7 +458,6 @@
 		"appointment_booked": "Appointment booked successfully",
 		"upcming_apointment": "Upcoming appointments",
 		"office_visit": "Office visit",
-		"Task":"Task",
 		"cancel_apointmnt": "Cancel appointment",
 		"show_past_apointment": "Show past appointments",
 		"plz_write_short_explnation": "Please write a short explanation of why you have to cancel the appointment. Thank you.",
@@ -1305,7 +1304,7 @@
 		"Attachments":"Attachments",
 		"Roomname":"Roomname",              
 		"Bedsinroom":"Beds in room",
-		"AssignHouse":"Assign Hospitals",
+		"AssignHouse":"Assign House",
 		"AddTask":"Add Task",
 		"AddSpecialty":"Add Speciality",
 		"ChangeStaff":"Change Staff",
