--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -288,6 +288,7 @@
 		"ur_emergancy_data": "Your Emergency Data",
 		"extra": "Extra",
 		"srvc": "Service",
+		"Price": "Price",
 		"activated": "Activated",
 		"past_apointment": "Past Appointment",
 		"hide_past_appointment": "Hide Past Appointments",
@@ -832,6 +833,7 @@
 		"select_time_to": "Select time(to)",
 		"detail_ques": "Details / Questions",
 		"all": "All",
+		"General": "General",
 		"char_8": "8 characters",
 		"lettr_1": "1 letter",
 		"number_1": "1 number",
@@ -1261,6 +1263,9 @@
 		"Customservicedescription": "Custom service description",
 		"GermanMedicalCenterFZLLC": "German Medical Center FZ-LLC",
 		"Neurology": "Neurology",
+		"Cardiology": "Cardiology",
+		"Radiology": "Radiology",
+		"Oncology": "Oncology",
 		"AdultsWard": "Adults Ward",
 		"SpaceManagement": "Space Management",
 		"PatientFlow": "Patient Flow",
@@ -1275,6 +1280,7 @@
 		"DeleteSpeciality": "Delete Speciality",
 		"Iunderstandthat:": "I understand that:",
 		"AddSpeciality": "Add Speciality",
+		"addNewSpeciality": "+ Add a new Speciality",
 		"Lastmonth": "Last month",
 		"Examinations": "Examinations",
 		"Procedures": "Procedures",
@@ -1363,6 +1369,56 @@
 		"NewQuestion": "+ New Question",
 		"QuestionnaireDescription": "Questionnaire description",
 		"EditQuestion": "Edit Question",
-		"DeleteQuestion": "Delete Question"
+		"DeleteQuestion": "Delete Question",
+		"removeService": "Remove Service ?",
+		"sure_removeService": "Are you sure to remove this Service?",
+		"really_want_to_remove_service": "Are you really want to remove this Service?",
+		"newService": "+ New Service",
+		"editService": "Edit Service",
+		"deleteService": "Delete Service",
+		"Move_patient_here": "Move patient here ",
+		"deleteSpeciality": "Delete Speciality?",
+		"really_want_to_delete_speciality": "Are you really want to delete this Speciality?",
+		"BacktoChangeHospital": "Back to Change Hospital",
+		"select_all_conditions_to_delete_speciality": "Please select the all condition for delete the speciality",
+		"PleaseConfirmThatYouUnderstandTheConsequencesOfYourAction": "Please confirm that you understand the consequences of your action.",
+		"yesDeleteSpeciality": "Yes, Delete Speciality",
+		"cancelKeepSpeciality": "Cancel, Keep Speciality",
+		"AddWard": "+ Add a Ward",
+		"UpdateWard": "Update Ward",
+		"SaveWard": "Save Ward",
+		"BenitoNoboa": "Benito Noboa",
+		"P_ukd832kd2": "P_ukd832kd2",
+		"Room1": "Room 1",
+		"Room2": "Room 2",
+		"ChildrensWardContent": "Childrens Ward Content",
+		"Statistics": "Statistics",
+		"TotalPatients": "Total Patients",
+		"Doctors": "Doctors",
+		"Nurses": "Nurses",
+		"Oneh23min": "1h 23min",
+		"AvgTimeToStayInHospital": "Avg. Time of Stay in Hospital",
+		"threeM": "3m",
+		"sixM": "6m",
+		"oneY": "1y",
+		"All": "All",
+		"ActivityCounter": "Activity Counter",
+		"AvgTimeOfStay": "Avg. Time of stay",
+		"zeroh43min": "0 h 43 min",
+		"zeroh18min": "0 h 18 min",
+		"zeroh24min": "0 h 24 min",
+		"twelvedays": "12days",
+		"AddStaff": "Add staff",
+		"JamesMorrison": "James Morrison",
+		"P_mDnkbR30d": "P_mDnkbR30d",
+		"GregoryHouseMD": "Gregory House M.D.",
+		"MarkAndersonMD": "Mark Anderson M.D.",
+		"AhmadNazeri": "Ahmad Nazeri",
+		"AngelaLongoria": "Angela Longoria",
+		"ConanMatusov": "Conan Matusov",
+		"EzequielDengra": "Ezequiel Dengra",
+		"ShowArchivedTasks": "Show archived tasks",
+		"CreateNewPatient": "+ Create New Patient",
+		"AddNewPatient": "+ Add a new patient"
 	}
 }
