VirtualHospital Component Translation 1

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1293,8 +1293,10 @@
 		"Donetoday": "Done today",
 		"CreateaTask": "Create a Task",
 		"ForPatient": "For Patient",
-		
-		
+		"House_assigned_to_user": "House is assigned to User",
+		"House_alread_exist_to_user": "House is already exist to User",
+		"Select_atleast_one_house": "Select atleast one house",
+		"AssignedHouses": "Assigned Houses -",
 		"Taskdescription":"Task description",
 		"Assignedto":"Assigned to",
 		"Speciallity":"Speciallity",
@@ -1388,6 +1390,7 @@
 		"AddWard": "+ Add a Ward",
 		"UpdateWard": "Update Ward",
 		"SaveWard": "Save Ward",
+		"Save": "Save",
 		"BenitoNoboa": "Benito Noboa",
 		"P_ukd832kd2": "P_ukd832kd2",
 		"Room1": "Room 1",
@@ -1420,6 +1423,28 @@
 		"EzequielDengra": "Ezequiel Dengra",
 		"ShowArchivedTasks": "Show archived tasks",
 		"CreateNewPatient": "+ Create New Patient",
-		"AddNewPatient": "+ Add a new patient"
+		"AddNewPatient": "+ Add a new patient",
+		"Choice": "Choice",
+		"AddRoom": "+ Add a Room",
+		"Grapefruit": "Grapefruit",
+		"Lime": "Lime",
+		"Coconut": "Coconut",
+		"Mango": "Mango",
+		"RemovePatientfromFlow": "Remove Patient from Flow",
+		"patient_will_be_removed_and_cannot_be_reversed": "This patient will be removed from the flow. This action can not be reversed.",
+		"Yes_remove_patient": "Yes, Remove Patient",
+		"Cancel_keep_patient": "Cancel, Keep Patient",
+		"discharge_all_patients_here": "Discharge All Patients in This Step",
+		"AllPatientsWillBeDischargedFromFlow": "All Patients in this Step will be discharged from the flow.",
+		"What_would_you_do" : "What would you like to do?",
+		"createInvoices": "Create Invoices",
+		"dischargeWithoutInvoice": "Discharge without Invoices",
+		"OpenDetails": "Open details",
+		"change_staff": "Change Staff >",
+		"move_patient_to": "Move patient to >",
+		"assign_to_speciality": "Assign to Speciality >",
+		"assign_to_room": "Assign to room >",
+		"DischargePatient": "Discharge Patient",
+		"Please_assign_speciality_first": "Please assign a speciality first"
 	}
 }
