Worked on patientjourney, InvoiceView and TaskView

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -259,6 +259,7 @@
 		"connect": "اتصل",
 		"devices": "الأجهزة",
 		"services": "الخدمات",
+		"Price":"السعر",
 		"search_for_device_palce": "البحث عن اسم الجهاز أو الخدمة ...",
 		"view_details": "عرض التفاصيل",
 		"Details": "التفاصيل",
