--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -260,6 +260,7 @@
 		"connect": "Verbinden",
 		"devices": "Geräte",
 		"services": "Dienstleistungen",
+		"Price": "Preis",
 		"search_for_device_palce": "Nach Gerät oder Service suchen...",
 		"view_details": "Details ansehen",
 		"Details": "Einzelheiten",
