--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -633,6 +633,7 @@
 		"ScndOpinion": "Second Opinions",
 		"Contact": "Contact",
 		"Services": "Services",
+		"Price":"Price",
 		"latest_info": "Latest information",
 		"fors": "for",
 		"Enteremailfirst": "Enter email first",
