--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -258,7 +258,8 @@
 		"more": "Plus",
 		"connect": "Connexion",
 		"devices": "Dispositifs",
-		"services": "Services",
+		"services": "Prestations de service",
+		"Price": "Prix",
 		"search_for_device_palce": "Recherche du nom de l'appareil ou du service...",
 		"view_details": "Voir les détails",
 		"Details": "Détails",
