--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -580,6 +580,7 @@
 		"connect": "Verbind",
 		"devices": "Apparaten",
 		"services": "Diensten",
+		"Price": "Prijs",
 		"search_for_device_palce": "Zoek voor apparaat of servicenaam…",
 		"view_details": "Bekijk Details",
 		"Details": "Details",
