--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -260,6 +260,7 @@
     "connect": "Подключить",
     "devices": "Устройства",
     "services": "Услуги",
+    "Price":"Цена",
     "search_for_device_palce": "Поиск по имени устройства или службы...",
     "view_details": "Просмотр подробностей",
     "Details": "Подробности",
