--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -245,6 +245,7 @@
 		"connect": "Kuungana",
 		"devices": "Vifaa",
 		"services": "Huduma",
+		"Price":"Bei",
 		"search_for_device_palce": "Tafuta kwa ajili ya kifaa au huduma yako jina...",
 		"view_details": "Angalia maelezo",
 		"Details": "Maelezo",
