--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -259,6 +259,7 @@
 		"connect": "Bağla",
 		"devices": "Cihazlar",
 		"services": "Hizmetler",
+		"Price":"Fiyat",
 		"search_for_device_palce": " Cihazları veya hizmet ismini ara...",
 		"view_details": "Detaylara bak",
 		"Details": "Detaylar",
