new txt change for long covid

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1243,7 +1243,7 @@
 		"Multiorgan_failure":"فشل متعدد الأعضاء",
 		"past_date": "التاريخ الماضي",
 		"how_memory":"هل لديك مشاكل في الذاكرة؟",
-		"long_covid":"مراقبة طويلة كوفيد",
+		"long_covid":" أداة Long-Covid",
 		"energy_lavel_determine":"الرجاء تحديد مستوى الطاقة الخاص بك",
 		"EnergyManagement":"إدارة الطاقة",
 		"CovidElearning":"كوفيد التعلم الإلكتروني",
