--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1244,7 +1244,7 @@
 		"Multiorgan_failure":"多器官衰竭",
 		"past_date": "过去日期",
 		"how_memory":"你有记忆问题吗？",
-		"long_covid":"长期观察",
+		"long_covid":"长 Covid 工具",
 		"energy_lavel_determine":"请确定您的能量水平",
 		"EnergyManagement":"能源管理",
 		"CovidElearning":"Covid在线学习",
