--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1243,7 +1243,7 @@
 		"Multiorgan_failure":"Multiorgan failure",
 		"past_date": "Past Date",
 		"how_memory":"Do you have memory issues?",
-		"long_covid":"Long-Covid observation",
+		"long_covid":"Long-Covid tool",
 		"energy_lavel_determine":"Please determine your energy level",
 		"EnergyManagement":"Energy Management",
 		"CovidElearning":"Covid Elearning",
