--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1244,7 +1244,7 @@
 		"Multiorgan_failure":"Полиорганная недостаточность",
 		"past_date": "Прошлая дата",
 		"how_memory":"У вас проблемы с памятью?",
-		"long_covid":"Наблюдение за Long-Covid",
+		"long_covid":" Инструмент Long-Covid",
 		"energy_lavel_determine":"Пожалуйста, определите свой уровень энергии",
 		"EnergyManagement":"Управление энергией",
 		"CovidElearning":"Covid Электронное обучение",
