--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1243,7 +1243,7 @@
 		"Multiorgan_failure":"Fallo multiorgánico",
 		"past_date": "Fecha pasada",
 		"how_memory":"¿Tiene problemas de memoria?",
-		"long_covid":"Observación Long-Covid",
+		"long_covid":"Herramienta Long-Covid",
 		"energy_lavel_determine":"Por favor, determine su nivel de energía.",
 		"EnergyManagement":"Gestión energética",
 		"CovidElearning":"Covid Elearning",
