--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1244,7 +1244,7 @@
 		"Multiorgan_failure":"Falha de múltiplos órgãos",
 		"past_date": "Data Anterior",
 		"how_memory":"Você tem problemas de memória?",
-		"long_covid":"Observação Long-Covid",
+		"long_covid":"Ferramenta Long-Covid",
 		"energy_lavel_determine":"Por favor, determine seu nível de energia",
 		"EnergyManagement":"Gerenciamento de energia",
 		"CovidElearning":"Covid Elearning",
