--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -288,6 +288,7 @@
 		"ur_emergancy_data": "Your Emergency Data",
 		"extra": "Extra",
 		"srvc": "Service",
+		"qty": "Qty",
 		"Price": "Price",
 		"activated": "Activated",
 		"past_apointment": "Past Appointment",
@@ -327,6 +328,7 @@
 		"blood_pressure": "Blood Pressure",
 		"blood_sugar": "Blood Sugar",
 		"condition_pain": "Condition and Pain",
+		"Hidden": "Hidden",
 		"covid_diary": "COVID-19 Diary",
 		"diagnosis": "Diagnosis",
 		"travel": "Travel",
@@ -394,6 +396,7 @@
 		"doc_all": "Doctor: All",
 		"facility_all": "Facility: All",
 		"sort_by": "Sort by",
+		"sortBy": "Sort by:",
 		"clear_filter": "Clear filters",
 		"file_uploads": "File Uploads",
 		"hosp_name": "Hospital Name",
@@ -450,6 +453,8 @@
 		"view_all": "View all",
 		"temp_headech": "Temperature and headaches",
 		"open": "Open",
+		"kg": "kg",
+		"cm": "cm",
 		"date_of_dignose": "Date of diagnose",
 		"show_entry": "Show this entry",
 		"hide_entry": "Hide this entry",
@@ -1297,46 +1302,46 @@
 		"House_alread_exist_to_user": "House is already exist to User",
 		"Select_atleast_one_house": "Select atleast one house",
 		"AssignedHouses": "Assigned Houses -",
-		"Taskdescription":"Task description",
-		"Assignedto":"Assigned to",
-		"Speciallity":"Speciallity",
-		"Dueon":"Due on",
-		"Duplicate":"Duplicate",
-		"Archive":"Archive",
-		"Markasdone":"Mark as done",
-		"Attachments":"Attachments",
-		"Roomname":"Roomname",              
-		"Bedsinroom":"Beds in room",
-		"AssignHouse":"Assign House",
-		"AddTask":"Add Task",
-		"AddSpecialty":"Add Speciality",
-		"ChangeStaff":"Change Staff",
-		"AssignWardRoom":"Assign Ward / Room",
-		"MovePatient":"Move Patient",
-		"Specialitycolor":"Speciality color",
-		"InvoiceID":"Invoice ID",
-		"Status":"Status",
-		"Xray":"X-ray",
-		"CTScan":"CT Scan",
-		"BacktoPatientFlow":"Back to PatientFlow",
-		"NewEntry":"+ New Entry",
-		"NewTask":" + New Task",
-		"Editinfo":"Edit info",
-		"More":"More",
-		"MedicalStaff":"Medical Staff",
-		"CompletedTasks":"Completed Tasks",
-		"DocumentsFiles":"Documents / Files",
-		"Issued":"Issued",
-		"Weight":"Weight",
-		"Height":"Height",
-		"BloodPressure":"BloodPressure",
-		"Lastdoctorvisits":"Last doctor visits",
-		"Upcomingappointment":"Upcoming appointment",
-		"LastDocuments":"Last Documents",
-		"Prescription":"Prescription",
-		"Invoice_ID":"Invoice ID",
-		"Add_service":"Add service",
-		"Created_user_id_pin":"Created User ID and PIN",
+		"Taskdescription": "Task description",
+		"Assignedto": "Assigned to",
+		"Speciallity": "Speciallity",
+		"Dueon": "Due on",
+		"Duplicate": "Duplicate",
+		"Archive": "Archive",
+		"Markasdone": "Mark as done",
+		"Attachments": "Attachments",
+		"Roomname": "Roomname",
+		"Bedsinroom": "Beds in room",
+		"AssignHouse": "Assign House",
+		"AddTask": "Add Task",
+		"AddSpecialty": "Add Speciality",
+		"ChangeStaff": "Change Staff",
+		"AssignWardRoom": "Assign Ward / Room",
+		"MovePatient": "Move Patient",
+		"Specialitycolor": "Speciality color",
+		"InvoiceID": "Invoice ID",
+		"Status": "Status",
+		"Xray": "X-ray",
+		"CTScan": "CT Scan",
+		"BacktoPatientFlow": "Back to PatientFlow",
+		"NewEntry": "+ New Entry",
+		"NewTask": " + New Task",
+		"Editinfo": "Edit info",
+		"More": "More",
+		"MedicalStaff": "Medical Staff",
+		"CompletedTasks": "Completed Tasks",
+		"DocumentsFiles": "Documents / Files",
+		"Issued": "Issued",
+		"Weight": "Weight",
+		"Height": "Height",
+		"BloodPressure": "BloodPressure",
+		"Lastdoctorvisits": "Last doctor visits",
+		"Upcomingappointment": "Upcoming appointment",
+		"LastDocuments": "Last Documents",
+		"Prescription": "Prescription",
+		"Invoice_ID": "Invoice ID",
+		"Add_service": "Add service",
+		"Created_user_id_pin": "Created User ID and PIN",
 		"Hospitals": "Hospitals",
 		"InvoiceAmount": "Invoice amount",
 		"Editservice": "Edit service",
@@ -1395,6 +1400,7 @@
 		"P_ukd832kd2": "P_ukd832kd2",
 		"Room1": "Room 1",
 		"Room2": "Room 2",
+		"Bed2": "Bed 2",
 		"ChildrensWardContent": "Childrens Ward Content",
 		"Statistics": "Statistics",
 		"TotalPatients": "Total Patients",
@@ -1414,9 +1420,11 @@
 		"twelvedays": "12days",
 		"AddStaff": "Add staff",
 		"JamesMorrison": "James Morrison",
+		"JamesMorrisonPatient": "James Morrison (Patient)",
 		"P_mDnkbR30d": "P_mDnkbR30d",
 		"GregoryHouseMD": "Gregory House M.D.",
 		"MarkAndersonMD": "Mark Anderson M.D.",
+		"MarkAndersonMDDoctor": "Mark Anderson M.D. (Doctor)",
 		"AhmadNazeri": "Ahmad Nazeri",
 		"AngelaLongoria": "Angela Longoria",
 		"ConanMatusov": "Conan Matusov",
@@ -1436,7 +1444,7 @@
 		"Cancel_keep_patient": "Cancel, Keep Patient",
 		"discharge_all_patients_here": "Discharge All Patients in This Step",
 		"AllPatientsWillBeDischargedFromFlow": "All Patients in this Step will be discharged from the flow.",
-		"What_would_you_do" : "What would you like to do?",
+		"What_would_you_do": "What would you like to do?",
 		"createInvoices": "Create Invoices",
 		"dischargeWithoutInvoice": "Discharge without Invoices",
 		"OpenDetails": "Open details",
@@ -1445,6 +1453,64 @@
 		"assign_to_speciality": "Assign to Speciality >",
 		"assign_to_room": "Assign to room >",
 		"DischargePatient": "Discharge Patient",
-		"Please_assign_speciality_first": "Please assign a speciality first"
+		"Please_assign_speciality_first": "Please assign a speciality first",
+		"sevenFebat1238": "7 Feb at 12:38",
+		"ShotDescriptionOfThisService": "This can be a short description of this service.",
+		"one": "1",
+		"slash2": "/2",
+		"twentyThousandEuro": "200,00 €",
+		"twentyFourThousandEuro": "240,00 €",
+		"fifteen": "15",
+		"twenty": "20",
+		"twenty6": "26",
+		"DuplicateInvoice": "Duplicate Invoice",
+		"PrintInvoice": "Print Invoice",
+		"DownloadPDF": "Download PDF",
+		"Setstatus": "Set status",
+		"DeleteInvoice": "Delete Invoice",
+		"two021000248": "2021-000248",
+		"sixteen032020": "16/03/2020",
+		"slashmin": "/min",
+		"bslashmin": "b/min",
+		"mmHg": "mmHg",
+		"mgdl": "mg/dl",
+		"addNewEntry": "+ Add new entry",
+		"documentName": "Document name",
+		"dateAdded": "Date added",
+		"FirstdiagnosisDocx": "First diagnosis.docx (152KB)",
+		"sixteen022021": "16/02/2021",
+		"very_long_name_of_pdf": "A very long name of a do…pdf (621KB)",
+		"twelve022021": "12/02/2021",
+		"twenty052020": "20/05/2020",
+		"twenty1": "21",
+		"May": "May",
+		"twelve082020": "12/08/2020",
+		"IllinoisMasonicMedicalCenter": "Illinois Masonic Medical Center",
+		"DiagnosedBy": "Diagnosed by",
+		"DiagnosedOn": "Diagnosed on",
+		"TravelDiagnosis": "Travel Diagnosis",
+		"TraveledToAfrica": "Traveled to Africa",
+		"sixfebTo26feb": "06/02/2020 - 26/02/2020",
+		"ParagraphOfChronicDemyelination": "Multiple lesions again suggest chronic demyelination. Mild atrophy greatest in the frontal region may be associated with multiple sclerosis. Findings appear stable when compared with the prior study. There is no abnormal enhancement.",
+		"IMG_23_6_2020_09_18": "IMG_23_6_2020_09_18.jpg",
+		"No_name_filePDf": "No_name_file.pdf",
+		"KneePain": "Knee Pain",
+		"Acute": "Acute",
+		"Moderate42": "Moderate (42)",
+		"eighty3": "83",
+		"BurningStabbing": "Burning, Stabbing",
+		"one2180": "121/80",
+		"eighty": "80",
+		"twenty1May2020803AM": "21/05/2020, 8:03 AM",
+		"one21": "121",
+		"one23": "123",
+		"Normal": "Normal",
+		"Only_field_in_diary_entry_type": "This is the only field in Diary entry type. So we can leave it open.",
+		"Wysiwyg_editor_allow_us_simple_formatting": "Wysiwyg editor allows us simple formatting, like italic and so…",
+		"ParagraphExample": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis",
+		"simple_title": "This is a simple title",
+		"Bullet1": "Bullet 1",
+		"Bullet2": "Bullet 2",
+		"Bullet3": "Bullet 3"
 	}
 }
