VirtualHospital Component Translation 4

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -300,6 +300,7 @@
 		"data_srvcs": "Data Services",
 		"stay_upto_date_orgnize_data": "Stay up to date and let Aimedis organize your medical data",
 		"available": "Available",
+		"avlbl": "available",
 		"activate": "Activate",
 		"secnd_openion": "Second opinion",
 		"emrgancy_patient_data": "Emergency Patient Data",
@@ -1521,6 +1522,26 @@
 		"GotoRoomManagement": "Go to Room Management",
 		"RoomsBeds": "Rooms & Beds",
 		"rooms": "rooms",
-		"beds": "beds"
+		"beds": "beds",
+		"StaffActions": "Staff actions",
+		"thirty4": "34",
+		"Diagnoses_made": "Diagnoses made",
+		"Medication_administered": "Medication administered",
+		"Prescriptions_issued": "Prescriptions issued",
+		"remove_comment": "Remove the Comment ?",
+		"RemoveComment": "Remove Comment ?",
+		"remove_task": "Remove the Task ?",
+		"RemoveTask": "Remove Task?",
+		"you_sure_to_remove_comment": "Are you sure to remove this Comment?",
+		"you_sure_to_remove_task": "Are you sure to remove this Task?",
+		"really_want_to_remove_comment": "Are you really want to remove this Comment?",
+		"really_want_to_remove_task": "Are you really want to remove this Task?",
+		"add_task": "+ Add Task",
+		"Addtime": "Add time",
+		"remove_time": "Remove time",
+		"AddComment": "Add Comment",
+		"save_task_and_close": "Save Task & Close",
+		"EditTask": "Edit Task",
+		"DeleteTask": "Delete Task"
 	}
 }
