Jira tickets of date 21-12-21

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1349,7 +1349,7 @@
 		"Editservice": "Edit service",
 		"save_and_close": "Save & Close",
 		"Ward": "Ward",
-		"move_all_patients": "Move All Patient",
+		"move_all_patients": "Move All Patients to",
 		"move_step": "Move Step",
 		"Staff": "Staff",
 		"Room": "Room",
