Translation till Invoices

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -290,6 +290,7 @@
 		"srvc": "Service",
 		"qty": "Qty",
 		"Price": "Price",
+		"quantity":"quantity",
 		"activated": "Activated",
 		"past_apointment": "Past Appointment",
 		"hide_past_appointment": "Hide Past Appointments",
@@ -640,6 +641,7 @@
 		"ScndOpinion": "Second Opinions",
 		"Contact": "Contact",
 		"Services": "Services",
+		"ServiceName": "Service Name",
 		"latest_info": "Latest information",
 		"fors": "for",
 		"Enteremailfirst": "Enter email first",
@@ -1322,6 +1324,7 @@
 		"MovePatient": "Move Patient",
 		"Specialitycolor": "Speciality color",
 		"InvoiceID": "Invoice ID",
+		"CaseID": "Case ID",
 		"Status": "Status",
 		"Xray": "X-ray",
 		"CTScan": "CT Scan",
@@ -1398,6 +1401,7 @@
 		"UpdateWard": "Update Ward",
 		"SaveWard": "Save Ward",
 		"Save": "Save",
+		"Rename": "Rename",
 		"BenitoNoboa": "Benito Noboa",
 		"P_ukd832kd2": "P_ukd832kd2",
 		"Room1": "Room 1",
@@ -1537,6 +1541,7 @@
 		"really_want_to_remove_comment": "Are you really want to remove this Comment?",
 		"really_want_to_remove_task": "Are you really want to remove this Task?",
 		"add_task": "+ Add Task",
+		"AddAppointment": "+ Add Appointment",
 		"Addtime": "Add time",
 		"remove_time": "Remove time",
 		"AddComment": "Add Comment",
@@ -1544,6 +1549,29 @@
 		"EditTask": "Edit Task",
 		"DeleteTask": "Delete Task",
 		"Tasks": "Tasks",
-		"Promotion": "Promotion"
+		"Promotion": "Promotion",
+		"AliesID": "Alies ID -",
+		"Pin": "Pin -",
+		"Taskstatus": "Task status:",
+		"Iamhere": "I am here :",
+		"AimedisInvoiceReport": "Aimedis Invoice Report",
+		"ServiceList": "Service List",
+		"InvoiceData": "Invoice Data",
+		"Services:": "Services :",
+		"TotalAmount": "Total Amount",
+		"Created_at": "Created at",
+		"YourAimedisTeam": "Your Aimedis Team",
+		"aimedisIo":"https://aimedis.io",
+		"contactAimedisForQuery":"If you have any questions do not hesitate to contact us via the support chat or via contact@aimedis.com",
+		"SysAimedis": "https://sys.aimedis.com",
+		"NewInvoice": "+ New Invoice",
+		"Paid": "Paid",
+		"Draft": "Draft",
+		"Overdue":"Overdue",
+		"RemoveService": "Remove the Service ?",
+		"sure_remove_service_from_invoice": "Are you sure to remove this Service from Invoice?",
+		"BacktoBilling": "Back to Billing",
+		"FinishInvoice": "Finish Invoice",
+		"SaveDraft": "Save Draft"
 	}
 }
