Final Translation of VirtualHospital and VirtualHospitalComponents

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1572,6 +1572,8 @@
 		"BacktoBilling": "Back to Billing",
 		"FinishInvoice": "Finish Invoice",
 		"SaveDraft": "Save Draft",
-		"Entries":"Entries"
+		"Entries":"Entries",
+		"PatientInInvoice": "Patient In invoice",
+		"Question": "Question"
 	}
 }
