--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1326,8 +1326,8 @@
 		"Xray": "X-ray",
 		"CTScan": "CT Scan",
 		"BacktoPatientFlow": "Back to PatientFlow",
-		"NewEntry": "+ New Entry",
-		"NewTask": " + New Task",
+		"NewEntry": "Entry",
+		"NewTask": "Task",
 		"Editinfo": "Edit info",
 		"More": "More",
 		"MedicalStaff": "Medical Staff",
